--- a/Klipper Config/Orbiter2_SmartSensor.cfg
+++ b/Klipper Config/Orbiter2_SmartSensor.cfg
@@ -2,8 +2,8 @@
 ################################# Orbiter Sensor CONFIGURATION ##################################################
 #################################################################################################################
 
-#config file version v3.1.0
-#release date: 01.12.2024
+#config file version v3.1.1
+#release date: 03.12.2024
 
 # PAUSE, RESUME and CANCEL macros are defined at the end of this config file.
 # If you prefer using your own please delete them, otherwise define parking position below.
@@ -21,6 +21,7 @@ variable_nozzle_purge_length    :100    # filament extrude amount during load se
 variable_nozzle_purge_speed     :450    # filament extrude speed in mm/min adjust this value lower if flow is too high and extruder skips during loading, default is 300
 variable_unload_distance        :65     # filament retract distance for unload procedure. this length shall be long enough to extract the filament above the drive gears
 variable_disable_autoload       :False  # disable filament autoload feature by setting this variable True
+variable_disable_autounload     :False  # disable filamen unload by unload button
 variable_disable_runout         :False  # disable runout by setting this variable True
 variable_disable_autochange     :True   # disable filament auto change after runout detection
 variable_disable_tangle         :False  # disable tangle by setting this variable True
@@ -46,9 +47,10 @@ pause_delay: 0.1
 [gcode_button filament_unload]
 pin: orbitoolO2:PA14 #  edit sensor connection pin if not used with otbiter toolboards
 press_gcode:  # filament unload procedure   
+  #M118 Debug Unload press
   unload_tangle_init
 release_gcode: # do not add any macro call here
-
+  #M118 Debug Unload release
 #################################################################################################################################
 ####################################### DO NOT CHANGE ANYTHING BELOW THIS LINE!!! ###############################################
 #################################################################################################################################
@@ -189,6 +191,7 @@ gcode:
       {% if (printer.print_stats.state != "paused" and loadbusy == 0) %} #enable unload if not printing and not paused
         {% if(sensor.disable_autounload|lower == 'false') %} # run unload macro if enabled
           filament_unload
+          M118 filament unload called
         {% endif %}
       {% endif %}
   {% endif %}
