--- a/Klipper Config/Orbiter2_SmartSensor.cfg
+++ b/Klipper Config/Orbiter2_SmartSensor.cfg
@@ -6,18 +6,18 @@
 #release date: 03.12.2024
 
 # PAUSE, RESUME and CANCEL macros are defined at the end of this config file.
-# If you prefer using your own please delete them, otherwise define parking position below.
-#when using PAUSE, RESUME and CANCEL macros of this file, please comment out the #[inlcude mainsail.cfg] from you printer.cfg file.
+# If you prefer using your own, please delete them, otherwise define parking position below.
+# when using PAUSE, RESUME and CANCEL macros of this file, please comment out the #[include mainsail.cfg] from your printer.cfg file.
 
 #################################################################################################################
 ################################# CHANGE HERE MACRO CONFIGURABLES################################################
 #################################################################################################################
 
-[gcode_macro _SENSOR_VARIABLES]         # change here macro configurables, enable disable functions!*************************
+[gcode_macro _SENSOR_VARIABLES]         # change here macro configurables, enable/disablee functions! 
 variable_filament_load_temp     :230    # temperature to heat up hotend for filament loading, default is 235
-variable_filament_unload_temp   :185    # temperature to heat up hotend for filament un-loading, default is 185
+variable_filament_unload_temp   :185    # temperature to heat up hotend for filament unloading, default is 185
 variable_filament_load_min_temp :190    # minimum hotend set temperature allowed in filament load macro, default is 190
-variable_nozzle_purge_length    :100    # filament extrude amount during load sequenc, hotend purge from old filament, default is 200
+variable_nozzle_purge_length    :100    # filament extrude amount during load sequence, hotend purge from old filament, default is 200
 variable_nozzle_purge_speed     :450    # filament extrude speed in mm/min adjust this value lower if flow is too high and extruder skips during loading, default is 300
 variable_unload_distance        :65     # filament retract distance for unload procedure. this length shall be long enough to extract the filament above the drive gears
 variable_disable_autoload       :False  # disable filament autoload feature by setting this variable True
@@ -27,9 +27,9 @@ variable_disable_autochange     :True   # disable filament auto change after run
 variable_disable_tangle         :False  # disable tangle by setting this variable True
 variable_pause_timeout          :3600   # printer timeout setting in seconds, avoids disabling of steppers and heaters after klipper default timeout of 600s 
 variable_enable_beep            :True   # uses M300 sound feature, set it True to enable
-variable_park_position_x        :20     # edit your X parking position here for pause macro trigerred by runout
-variable_park_position_y        :0      # edit your Y parking position here for pause macro trigerred by runout
-variable_park_lift_z            :20     # edit your Z lift amount for parking position here, default is 10
+variable_park_position_x        :20     # edit your X parking position here for pause macro triggered by runout
+variable_park_position_y        :0      # edit your Y parking position here for pause macro triggered by runout
+variable_park_lift_z            :20     # edit your Z-Lift amount for parking position here, default is 10
 Variable_park_retraction        :1      # edit your retraction amount for parking, default is 1
 gcode:
 
@@ -38,14 +38,14 @@ switch_pin: orbitoolO2:PA13 # edit sensor connection pin if not used with otbite
 pause_on_runout: False
 runout_gcode: runout_init
 insert_gcode: filament_load_init
-event_delay: 0.1
+event_delay: 0.1 # may be changed to 0 for user with mmu
 pause_delay: 0.1
 
 #********************************************************************************************************
 
 #////////////////////////////////////////Filament Unload macros/////////////////////////////////////////////////
 [gcode_button filament_unload]
-pin: orbitoolO2:PA14 #  edit sensor connection pin if not used with otbiter toolboards
+pin: orbitoolO2:PA14 #  edit sensor connection pin, if not used with otbiter toolboards
 press_gcode:  # filament unload procedure   
   #M118 Debug Unload press
   unload_tangle_init
@@ -69,7 +69,7 @@ gcode:
   {% if(sensor.disable_runout|lower == 'false') %}
       filament_change_state1
   {% else %}
-    M118 O2S: Filament runout is disabled in the sensor config file!   
+    M118 O2S: Filament runout is disabled in the sensor config file! 
   {% endif %} 
 
 [gcode_macro filament_change_state1]
@@ -78,11 +78,11 @@ variable_temp_target: 0
 gcode:
   {% set sensor = printer['gcode_macro _SENSOR_VARIABLES'] %}  
   {% if changebusy == 0 %}
-    M118 O2S: Printer paused due to filament runout!       
+    M118 O2S: Printer paused due to filament runout! 
     PAUSE # call printer pause macro              
     {% if (sensor.disable_autochange|lower == 'false') %}
       SET_GCODE_VARIABLE MACRO=filament_change_state1 VARIABLE=changebusy VALUE=1       
-      filament_change_state2   # comment this line if you do not want to automatically unload filament in case there is a runout detected.
+      filament_change_state2
     {% endif %}  
   {% endif %}
 
@@ -97,15 +97,15 @@ gcode:
   M83
   G92 E0   
   # {% if printer[printer.toolhead.extruder].temperature < 185 %} # hardcoded threshold
-  {% if (printer.extruder.can_extrude|lower != 'true')%} # checing for minimum extrusion temperature
-        # check if temperature is over the minimum extrusion temp. min_extrude_temp must be defined in the extruder config (to about 185)
-      M118 O2S: Heating hotend!        
+  {% if (printer.extruder.can_extrude|lower != 'true')%} # Checking for minimum extrusion temperature
+        # Check if temperature is over the minimum extrusion temperature. min_extrude_temp must be defined in the extruder config (to about 185)
+      M118 O2S: Heating hotend! 
       SET_HEATER_TEMPERATURE HEATER=extruder TARGET={sensor.filament_unload_temp} # restore user temp if it was set before loading      
-      TEMPERATURE_WAIT SENSOR=extruder MINIMUM={sensor.filament_unload_temp-1} #wait for reaching filament unload temp
+      TEMPERATURE_WAIT SENSOR=extruder MINIMUM={sensor.filament_unload_temp-1} #wait for reaching filament unload temperature
   {% endif %}     
-  {% if(printer.extruder.target == 0) %} # checing for set temperature if is zero than set to 200 / hotend hot but cooling due to set target temp 0
+  {% if(printer.extruder.target == 0) %} # Checking for set temperature if is zero, than heat hotend
       SET_HEATER_TEMPERATURE HEATER=extruder TARGET={sensor.filament_unload_temp} # restore user temp if it was set before loading      
-      TEMPERATURE_WAIT SENSOR=extruder MINIMUM={sensor.filament_unload_temp-1} #wait for reaching filament unload temp
+      TEMPERATURE_WAIT SENSOR=extruder MINIMUM={sensor.filament_unload_temp-1} #wait for reaching filament unload temperature
   {% endif %} 
   G0 E-5 F3600 	#extract filament to cold end
   G4 P2000 # wait for two seconds
@@ -113,7 +113,7 @@ gcode:
   G0 E-5 F3600 	#extract filament to cold end
   G0 E-{sensor.unload_distance} F300	# continue extraction slow allow filament to be cooled enough before reaches the gears  
   M400   
-  M118 O2S: Load new filament! Wait until is loaded, then resume printing.  
+  M118 O2S: Load new filament! Wait until it is loaded, then resume printing.
   #SET_HEATER_TEMPERATURE HEATER=extruder TARGET=0 # switch off heater
   UPDATE_DELAYED_GCODE ID=clear_loadbusy DURATION=0.5
   UPDATE_DELAYED_GCODE ID=clear_changebusy DURATION=0.5
@@ -126,10 +126,10 @@ gcode:
       SET_GCODE_VARIABLE MACRO=unload_tangle_init VARIABLE=loadbusy VALUE=1
       filament_load
     {% else %}
-    M118 O2S: Filament auto-load is disabled in the sensor config file!   
+    M118 O2S: Filament auto-load is disabled in the sensor config file! 
     {% endif %} 
   {% else %}    
-    M118 O2S: Printing! Can't load filament right now!    
+    M118 O2S: Printing! Can't load filament right now! 
   {% endif %} 
   
 
@@ -176,7 +176,7 @@ gcode:
  
 
 #############################################END filament auto load macro section END***********************************************************
-#############################################filament auto unload and Tangle macro section*****************************************************************
+#############################################filament auto unload and Tangle macro section *****************************************************************
 [gcode_macro unload_tangle_init]
 variable_loadbusy: 0
 gcode:
@@ -188,7 +188,7 @@ gcode:
       M118 O2S: Filament tangle detected, action disabled!
     {% endif %} 
   {% else %} #filament unload button pressed
-      {% if (printer.print_stats.state != "paused" and loadbusy == 0) %} #enable unload if not printing and not paused
+      {% if (printer.print_stats.state == "paused" and loadbusy == 0) %} #enable unload if not printing and not paused
         {% if(sensor.disable_autounload|lower == 'false') %} # run unload macro if enabled
           filament_unload
           M118 filament unload called
@@ -205,12 +205,12 @@ gcode:
       M118 O2S: Unloading filament...    
       M83
       G92 E0     
-      {% if (printer.extruder.can_extrude|lower != 'true')%} # checing for minimum extrusion temperature
-        # check if temperature is over the minimum extrusion temp. min_extrude_temp must be defined in the extruder config (to about 185)        
+      {% if (printer.extruder.can_extrude|lower != 'true')%} # Checking for minimum extrusion temperature
+        # check if temperature is over the minimum extrusion temperature. min_extrude_temp must be defined in the extruder config (to about 185)        
         SET_HEATER_TEMPERATURE HEATER=extruder TARGET={sensor.filament_unload_temp} # restore user temp if it was set before loading        
         TEMPERATURE_WAIT SENSOR=extruder MINIMUM={sensor.filament_unload_temp-1}  
       {% endif %}
-      {% if(printer.extruder.target == 0) %} # checing for set temperature if is zero than set to 185 / hotend hot but cooling due to set target temp 0            
+      {% if(printer.extruder.target == 0) %} # Checking for set temperature if is zero than set to 185 / hotend hot but cooling due to set target temp 0            
         SET_HEATER_TEMPERATURE HEATER=extruder TARGET={sensor.filament_unload_temp} # restore user temp if it was set before loading        
         TEMPERATURE_WAIT SENSOR=extruder MINIMUM={sensor.filament_unload_temp-1} 
       {% endif %}
@@ -219,7 +219,7 @@ gcode:
       G4 P2000 # wait for two seconds
       G0 E6 F3600 # push the filament back 
       G0 E-10 F3600 	#extract filament to cold end
-      G0 E-{sensor.unload_distance} F300	# continue extraction slow allow filament to be cooled enough before reaches the gears       
+      G0 E-{sensor.unload_distance} F300	# continue extraction slowly and allow filament to be cooled enough before reaches the gears       
       M400 # wait to complete unload
       M118 O2S: Filament unload complete!   
       {% if (sensor.enable_beep|lower == 'true') %}
@@ -236,7 +236,7 @@ gcode:
   PAUSE
     
 
-#############################################END filament auto unload macro section END***********************************************************
+#############################################END filament auto-unload macro section END***********************************************************
 
 [delayed_gcode clear_unloadbusy]
 gcode:
@@ -320,6 +320,7 @@ gcode:
     CLEAR_PAUSE
     SDCARD_RESET_FILE
     BASE_CANCEL_PRINT 
+    SET_IDLE_TIMEOUT TIMEOUT=600 # restor klipper default printer timeout to 10 min
 
 [gcode_macro T0]
 gcode:
