--- a/Klipper Config/Orbiter2_SmartSensor.cfg
+++ b/Klipper Config/Orbiter2_SmartSensor.cfg
@@ -2,8 +2,8 @@
 ################################# Orbiter Sensor CONFIGURATION ##################################################
 #################################################################################################################
 
-#config file version v3.1.1
-#release date: 03.12.2024
+#config file version v3.1.2
+#release date: 05.12.2024
 
 # PAUSE, RESUME and CANCEL macros are defined at the end of this config file.
 # If you prefer using your own, please delete them, otherwise define parking position below.
@@ -47,10 +47,13 @@ pause_delay: 0.1
 [gcode_button filament_unload]
 pin: orbitoolO2:PA14 #  edit sensor connection pin, if not used with otbiter toolboards
 press_gcode:  # filament unload procedure   
-  #M118 Debug Unload press
+  M118 Debug Unload press
   unload_tangle_init
 release_gcode: # do not add any macro call here
   #M118 Debug Unload release
+
+
+  
 #################################################################################################################################
 ####################################### DO NOT CHANGE ANYTHING BELOW THIS LINE!!! ###############################################
 #################################################################################################################################
@@ -188,7 +191,8 @@ gcode:
       M118 O2S: Filament tangle detected, action disabled!
     {% endif %} 
   {% else %} #filament unload button pressed
-      {% if (printer.print_stats.state == "paused" and loadbusy == 0) %} #enable unload if not printing and not paused
+      #{% if (printer.print_stats.state == "paused" and loadbusy == 0) %} #enable unload if not printing and not paused
+      {% if (loadbusy == 0) %} #enable unload if not already loading
         {% if(sensor.disable_autounload|lower == 'false') %} # run unload macro if enabled
           filament_unload
           M118 filament unload called
