--- a/Klipper Config/Orbiter2_SmartSensor.cfg
+++ b/Klipper Config/Orbiter2_SmartSensor.cfg
@@ -47,7 +47,7 @@ pause_delay: 0.1
 [gcode_button filament_unload]
 pin: orbitoolO2:PA14 #  edit sensor connection pin, if not used with otbiter toolboards
 press_gcode:  # filament unload procedure   
-  M118 Debug Unload press
+ # M118 Debug Unload press
   unload_tangle_init
 release_gcode: # do not add any macro call here
   #M118 Debug Unload release
