--- a/Klipper Config/Orbiter2_SmartSensor.cfg
+++ b/Klipper Config/Orbiter2_SmartSensor.cfg
@@ -290,7 +290,7 @@ gcode:
     G1 Z{z_safe}
     G90
     G1 X{x} Y{y} F6000
-    SET_LED LED=OrbiLED RED=1.0 GREEN=1.0 BLUE=0.0
+    #SET_LED LED=OrbiLED RED=1.0 GREEN=1.0 BLUE=0.0
 
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
@@ -315,7 +315,7 @@ gcode:
     SET_IDLE_TIMEOUT TIMEOUT=600 # restor klipper default printer timeout to 10 min
     RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
     BASE_RESUME    
-    SET_LED LED=OrbiLED RED=1.0 GREEN=1.0 BLUE=1.0
+   # SET_LED LED=OrbiLED RED=1.0 GREEN=1.0 BLUE=1.0
 
 [gcode_macro CANCEL_PRINT]
 rename_existing: BASE_CANCEL_PRINT
